# stringer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/stringer-adapt/: Cargo.toml
crates/stringer-adapt/src/: binary.rs  binary_ext.rs  eet.rs  hash.rs  lib.rs  memory.rs  model.rs  xml.rs  xt_sst.rs
crates/stringer-adapt/tests/: adapt.rs
crates/stringer-app/: Cargo.toml
crates/stringer-app/src/: adapt.rs  context.rs  dto.rs  error.rs  knowledge.rs  lib.rs  paths.rs  settings.rs  workspace.rs
crates/stringer-app/tests/: app.rs
crates/stringer-cli/: Cargo.toml
crates/stringer-cli/src/: app.rs  cli_settings.rs  feedback.rs  help.rs  lib.rs  main.rs  workspace.rs  workspace_batch_input.rs
crates/stringer-cli/tests/: batch_commands.rs  batch_skip.rs  cli.rs  feedback.rs  inspect.rs  knowledge_term.rs  normalize.rs
crates/stringer-core/: Cargo.toml
crates/stringer-core/src/: asset.rs  binary.rs  diagnostic.rs  error.rs  language.rs  lib.rs  string_entry.rs
crates/stringer-core/tests/: binary.rs  file_bundle.rs
crates/stringer-extraction-filter/: Cargo.toml
crates/stringer-extraction-filter/src/: lib.rs
crates/stringer-extraction-filter/tests/: filter.rs
crates/stringer-interface/: Cargo.toml
crates/stringer-interface/src/: adapt.rs  batch.rs  inspect.rs  knowledge.rs  lib.rs  workspace.rs
crates/stringer-knowledge/: Cargo.toml
crates/stringer-knowledge/src/: candidates.rs  error.rs  layers.rs  lib.rs  session.rs  terms.rs  translations.rs  translations_tests.rs
crates/stringer-knowledge/src/index/: entry.rs  mod.rs
crates/stringer-knowledge/src/lookup/: mod.rs
crates/stringer-knowledge/tests/: knowledge.rs  knowledge_annotate_perf.rs  knowledge_index_layers.rs  knowledge_lookup.rs  knowledge_terms.rs  progress.rs  skip.rs
crates/stringer-knowledge/tests/support/: mod.rs
crates/stringer-mcp/: Cargo.toml
crates/stringer-mcp/src/: lib.rs  main.rs  schema.rs
crates/stringer-mcp/tests/: batch_tools.rs  tools.rs
crates/stringer-pex/: Cargo.toml
crates/stringer-pex/src/: binary.rs  codec.rs  constants.rs  error.rs  filter.rs  high_level.rs  lib.rs  model.rs  opcode.rs
crates/stringer-pex/tests/: codec.rs  extraction.rs
crates/stringer-pipeline/: Cargo.toml
crates/stringer-pipeline/src/: error.rs  knowledge.rs  lib.rs  model.rs  processors.rs
crates/stringer-pipeline/tests/: pipeline.rs
crates/stringer-plugin/: Cargo.toml
crates/stringer-plugin/src/: encoding.rs  error.rs  filter.rs  high_level.rs  lib.rs  plugin.rs  registry.rs  strings.rs  types.rs
crates/stringer-plugin/tests/: field_registry.rs  high_level.rs  plugin_localization.rs  strings_files.rs
crates/stringer-plugin/tests/support/: mod.rs
crates/stringer-reader/: Cargo.toml
crates/stringer-reader/src/: archive.rs  error.rs  lib.rs  paths.rs  reader.rs  source.rs
crates/stringer-reader/tests/: mod_root.rs
crates/stringer-scaleform/: Cargo.toml
crates/stringer-scaleform/src/: lib.rs  translation.rs
crates/stringer-scaleform/tests/: scaleform.rs
crates/stringer-workspace/: Cargo.toml
crates/stringer-workspace-api/: Cargo.toml
crates/stringer-workspace-api/src/: batch.rs  error.rs  inspect.rs  lib.rs  normalize.rs  operations.rs  paths.rs
crates/stringer-workspace-api/tests/: batch.rs  extraction_filter_roundtrip.rs  extraction_filters.rs  inspect.rs  settings.rs  workspace.rs  workspace_lifecycle.rs
crates/stringer-workspace-api/tests/support/: mod.rs
crates/stringer-workspace-core/: Cargo.toml
crates/stringer-workspace-core/src/: batch_claims.rs  error.rs  fsutil.rs  lib.rs  lock.rs  package.rs  settings.rs
crates/stringer-workspace-ops/: Cargo.toml
crates/stringer-workspace-ops/src/: batch.rs  batch_packet.rs  batch_submission.rs  error.rs  inspect.rs  labels.rs  lib.rs  normalize.rs
crates/stringer-workspace-ops/tests/: batch.rs  batch_packet.rs  inspect.rs  normalize.rs
crates/stringer-workspace-ops/tests/support/: mod.rs
crates/stringer-workspace/src/: batch.rs  error.rs  fsutil.rs  inspect.rs  jsonl.rs  knowledge.rs  knowledge_index.rs  knowledge_index_layers.rs  knowledge_lookup.rs  knowledge_terms.rs  lib.rs  lock.rs  operations.rs  package.rs  paths.rs  settings.rs
crates/stringer-workspace/tests/: batch.rs  inspect.rs  knowledge.rs  knowledge_index_layers.rs  knowledge_lookup.rs  knowledge_terms.rs  settings.rs  workspace.rs  workspace_lifecycle.rs
crates/stringer-workspace/tests/support/: mod.rs
docs/: bethesda-directory-layout.md  mutagen-research.md  xtranslator-research.md
docs/spec/: stringer-pipeline-design.md
skills/stringer-workflows/: SKILL.md
skills/stringer-workflows/agents/: openai.yaml
skills/stringer-workflows/references/: knowledge-lookup.md  review-validation.md  subagent-splitting.md  translation-batches.md  workflow-overview.md
xtask/: Cargo.toml
xtask/src/: command.rs  lib.rs  main.rs  release.rs
xtask/tests/: command.rs  line_budget.rs  release.rs
