[workspace]
members = [
    "crates/stringer-core",
    "crates/stringer-pex",
    "crates/stringer-plugin",
    "crates/stringer-reader",
    "crates/stringer-scaleform",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ba2 = "3.0.1"
bytes = "1.11.1"
camino = "1.2.2"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
walkdir = "2.5.0"
