[workspace]
members = [
    "crates/stringer-core",
    "crates/stringer-cli",
    "crates/stringer-pex",
    "crates/stringer-plugin",
    "crates/stringer-reader",
    "crates/stringer-scaleform",
    "crates/stringer-workspace",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "GPL-3.0-only"

[workspace.dependencies]
ba2 = "3.0.1"
bytes = "1.11.1"
camino = "1.2.2"
clap = "4.6.1"
directories = "6.0.0"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
miette = "7.6.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.52.3"
toml = "1.1.2"
tracing = "0.1.44"
walkdir = "2.5.0"
