[workspace]
members = [
    "crates/stringer-core",
    "crates/stringer-adapt",
    "crates/stringer-app",
    "crates/stringer-cli",
    "crates/stringer-extraction-filter",
    "crates/stringer-interface",
    "crates/stringer-knowledge",
    "crates/stringer-mcp",
    "crates/stringer-pex",
    "crates/stringer-pipeline",
    "crates/stringer-plugin",
    "crates/stringer-reader",
    "crates/stringer-scaleform",
    "crates/stringer-workspace-api",
    "crates/stringer-workspace-core",
    "crates/stringer-workspace-ops",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "GPL-3.0-only"

[workspace.dependencies]
aho-corasick = "1.1.4"
ba2 = "3.0.1"
bytes = "1.11.1"
camino = "1.2.2"
clap = "4.6.1"
csv = "1.4.0"
directories = "6.0.0"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
miette = "7.6.0"
quick-xml = "0.38.4"
rayon = "1.11.0"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.149"
schemars = "1.1.0"
thiserror = "2.0.18"
tokio = "1.52.3"
toml = "1.1.2"
toml_edit = "0.23.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
