[package]
name = "stringer-adapt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
quick-xml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stringer-core = { path = "../stringer-core" }
thiserror.workspace = true

[dev-dependencies]
stringer-pipeline = { path = "../stringer-pipeline" }
