[package]
name = "stringer-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stringer-adapt = { path = "../stringer-adapt" }
stringer-interface = { path = "../stringer-interface" }
stringer-knowledge = { path = "../stringer-knowledge" }
stringer-pipeline = { path = "../stringer-pipeline" }
stringer-workspace-api = { path = "../stringer-workspace-api" }
stringer-workspace-core = { path = "../stringer-workspace-core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
