[package]
name = "stringer-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "stringer"
path = "src/main.rs"

[dependencies]
camino.workspace = true
clap = { workspace = true, features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
serde.workspace = true
serde_json.workspace = true
stringer-adapt = { path = "../stringer-adapt" }
stringer-workspace = { path = "../stringer-workspace" }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
