[package]
name = "stringer-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "stringer"
path = "src/main.rs"

[dependencies]
camino.workspace = true
clap = { workspace = true, features = ["derive"] }
csv.workspace = true
indicatif = "0.18.4"
miette = { workspace = true, features = ["fancy"] }
serde.workspace = true
serde_json.workspace = true
stringer-app = { path = "../stringer-app" }
stringer-interface = { path = "../stringer-interface" }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
