[package]
name = "stringer-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "stringer-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["client", "server", "macros", "schemars", "transport-io"] }
schemars = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
stringer-app = { path = "../stringer-app" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
