[package]
name = "stringer-pex"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
stringer-core = { path = "../stringer-core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
bytes.workspace = true
