[package]
name = "stringer-plugin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
camino.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
stringer-core = { path = "../stringer-core" }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
