[package]
name = "stringer-workspace-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
directories.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stringer-core = { path = "../stringer-core" }
stringer-extraction-filter = { path = "../stringer-extraction-filter" }
stringer-pipeline = { path = "../stringer-pipeline" }
stringer-plugin = { path = "../stringer-plugin" }
thiserror.workspace = true
toml.workspace = true
