[package]
name = "stringer-workspace-ops"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
encoding_rs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stringer-pipeline = { path = "../stringer-pipeline" }
stringer-workspace-core = { path = "../stringer-workspace-core" }
thiserror.workspace = true
